about page link add

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
         </div>
         <div class="navbar navbar-dark bg-dark box-shadow">
             <div class="container d-flex justify-content-between">
-                <a href="#" class="navbar-brand d-flex align-items-center">
+                <a href="index.html" class="navbar-brand d-flex align-items-center">
                     <img src="assets/images/pizza.png" alt="">
                     <p> pizzr</p>
                 </a>
@@ -106,7 +106,7 @@
                 <a href="#"><i class="fa fa-3x fa-angle-double-up" aria-hidden="true"></i></a>
             </p>
              <p>pizzr 2018</p>
-            <p>Rutgers Coding Bootcamp group project</p>
+            <p>Rutgers group project</p>
         </div>
     </footer>
     <!-- Bootstrap core JavaScript
